--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,34 @@
             "role": "Developer"
         }
     ],
+    "support": {
+        "email": "mail@robertsaupe.de",
+        "issues": "https://github.com/robertsaupe/php-json/issues"
+    },
+    "funding": [
+        {
+            "type": "github",
+            "url": "https://github.com/sponsors/robertsaupe"
+        },
+        {
+            "type": "patreon",
+            "url": "https://patreon.com/robertsaupe"
+        },
+        {
+            "type": "paypal",
+            "url": "https://www.paypal.com/donate?hosted_button_id=SQMRNY8YVPCZQ"
+        },
+        {
+            "type": "amazon",
+            "url": "https://www.amazon.de/ref=as_li_ss_tl?ie=UTF8&linkCode=ll2&tag=robertsaupe-21&linkId=b79bc86cee906816af515980cb1db95e&language=de_DE"
+        }
+    ],
     "require": {
         "php": ">=8.0.2",
         "symfony/filesystem": "^6"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^1"
     },
     "autoload": {
         "psr-4": { 
@@ -40,5 +65,11 @@
         },
         "platform-check": false,
         "sort-packages": true
+    },
+    "scripts": {
+        "stan": "phpstan analyse -vvv",
+        "test-basic": "@php test/LogBasic.php",
+        "test-file": "@php test/LogFile.php",
+        "test-html": "@php test/LogHTML.php"
     }
 }
